--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@mui/material": "^5.0.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0"
   }
