--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@mui/icons-material": "^5.0.3",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "@types/react-dom": "^17.0.10",
     "firebase": "^7.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.4.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
