--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1",
     "firebase": "^7.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.4.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
@@ -50,7 +50,9 @@
   "devDependencies": {
     "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "@typescript-eslint/parser": "^5.1.0",
     "prop-types": "^15.7.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "typescript": "^4.4.4"
   }
 }
