--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/parser": "^5.1.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0",
