--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/client/node_modules
 /node_modules
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+/client/coverage
 
 # production
 /build
@@ -27,5 +28,3 @@ yarn-error.log*
 .idea/
 out/
 .idea
-/client/node_modules/
-/client/coverage/
