--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/client/node_modules
 /node_modules
 /.pnp
 .pnp.js
 
 # testing
-/client/coverage
+/coverage
 
 # production
 /build
@@ -28,3 +27,5 @@ yarn-error.log*
 .idea/
 out/
 .idea
+/client/node_modules/
+/client/coverage/
