--- a/package.json
+++ b/package.json
@@ -2,29 +2,71 @@
   "name": "dog-shop",
   "version": "1.0.0",
   "description": "Dog Shop",
-  "main": "app.js",
-  "scripts": {
-    "start": "cross-env NODE_ENV=production node app.js",
-    "server": "nodemon app.js",
-    "client": "npm run start --prefix client",
-    "client:install": "npm install --prefix client",
-    "client:build": "npm run build --prefix client",
-    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
-  },
-  "keywords": [
-    "mern",
-    "react"
-  ],
+  "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.3",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1",
+    "firebase": "^7.24.0",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.1",
     "shortid": "^2.2.15"
   },
+  "main": "app.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node app.js",
+    "server": "nodemon app.js",
+    "client": "react-scripts start --prefix client",
+    "client:build": "react-scripts build --prefix client",
+    "test": "react-scripts test --prefix client",
+    "eject": "react-scripts eject --prefix client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "proxy": "http://localhost:2300",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
+    "@mui/material": "^5.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@types/uuid": "^8.3.1",
+    "@typescript-eslint/parser": "^5.1.0",
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.3.0",
+    "typescript": "^4.4.4",
     "concurrently": "^5.0.2",
     "cross-env": "^6.0.3",
     "nodemon": "^2.0.2"
