--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "firebase": "^7.24.0",
@@ -32,6 +33,7 @@
     "web-vitals": "^1.1.2"
   },
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js",
@@ -65,11 +67,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/parser": "^5.1.0",
-    "prop-types": "^15.7.2",
-    "react-router-dom": "^5.3.0",
-    "typescript": "^4.4.4",
     "concurrently": "^5.0.2",
     "cross-env": "^6.0.3",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "prop-types": "^15.7.2",
+    "react-router-dom": "^5.3.0",
+    "typescript": "^4.4.4"
   }
 }
