--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "nodemon": "^2.0.2",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
