--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
   "devDependencies": {
     "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/config": "^0.0.40",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/parser": "^5.1.0",
     "concurrently": "^5.0.2",
