--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
@@ -13,6 +19,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitAny": true,
-    "allowJs": true,
-  }
+    "allowJs": true
+  },
+  "include": [
+    "src"
+  ]
 }
