--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   },
   "main": "app.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app.ts",
+    "start": "cross-env NODE_ENV=production ts-node --skip-project --project tsconfig.node.json app.ts",
     "server": "nodemon app.ts",
     "client": "react-scripts start --prefix client",
     "client:build": "react-scripts build --prefix client",
     "test": "react-scripts test --prefix client",
     "eject": "react-scripts eject --prefix client",
-    "dev": "run-p server client"
+    "dev": "run-p start client"
   },
   "eslintConfig": {
     "extends": [
@@ -71,7 +71,7 @@
     "@typescript-eslint/parser": "^5.1.0",
     "concurrently": "^5.0.2",
     "cross-env": "^6.0.3",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.15",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0",
     "ts-node": "^10.4.0",
