--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.4",
+    "@types/nodemon": "^1.19.1",
     "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
@@ -23,6 +24,7 @@
     "firebase": "^7.24.0",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^6.0.1",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -71,10 +73,8 @@
     "@typescript-eslint/parser": "^5.1.0",
     "concurrently": "^5.0.2",
     "cross-env": "^6.0.3",
-    "nodemon": "^2.0.15",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.3.0",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
