--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "client:build": "react-scripts build --prefix client",
     "test": "react-scripts test --prefix client",
     "eject": "react-scripts eject --prefix client",
-    "dev": "run-p start client"
+    "dev": "run-p server client"
   },
   "eslintConfig": {
     "extends": [
