--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "4.0.3",
     "shortid": "^2.2.15",
     "uuid": "^8.3.2",
