--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.3.0",
     "firebase": "^7.24.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.14",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
